tests/purs/passing/2172.purs
module Main where

import Effect.Console (log)

foreign import a' :: Number
foreign import b' :: Number
foreign import c' :: Number
foreign import d' :: Number

main = log "Done"
