tests/purs/failing/QualifierApostropheMiddle.purs
-- @shouldFailWith ErrorParsingModule
module Qualifier'HasPrime.OkModuleName where

import Effect.Console (log)

main = log "Done"
